## Changelog

### 1.8

 * add class PDFRenderer with non-static methods - useful for mocking in tests
 * add method RenderPDFTemplate.getArguments() - now we can catch it in tests and verify
 
### 1.7

 * add class PDFRenderer with non-static methods - useful for mocking in tests

### 1.6

 * add method PDF.renderAsAttachment() that DOWNLOADS pdf instead of opening it in browser (Content-Disposition=attachment)

### 1.5

 * set normalize HTML configurable: it removed whitespaces in the beginning on element content

### 1.4

 * set re-formatting HTML code by JTidy configurable : it broke PDF layout sometimes (because it inserted extra line breaks)it broke PDF layout sometimes (because it inserted extra line breaks)

### 1.3

* remove unused file
* add more unit-tests
 
### 1.2

* fix bug with removing original of hacked classes from core-renderer.jar and yahp-internal.jar
* upgrade to shaniparser 1.4.22
* add normal slf4j logging

### 1.1

 * store dependencies in "jars" folder instead of "lib". It fixes "play deps --sync" work.

### 1.0

 * code cleanup
 * update dependencies: xml-apis.jar, shaniparser.jar
 * fork & release the old play--pdf 0.x (created by Nicolas Leroux)