@@ -2,6 +2,7 @@
 
 ### 1.8
 
+ * add methods PDFRenderer.renderPDF(Map<String, Object> arguments)
  * add class PDFRenderer with non-static methods - useful for mocking in tests
  * add method RenderPDFTemplate.getArguments() - now we can catch it in tests and verify
  
